--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "animejs": "^3.2.1",
     "next": "15.5.4",
-    "three": "^0.159.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "three": "^0.159.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -20,6 +20,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.180.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
