--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "animejs": "^3.2.1",
     "next": "15.5.4",
     "react": "19.1.0",
